--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ishsta Glass</title>
 </head>
+<header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Skills</a>
+        <a href="#">Work</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
 <body>
-    
+    <h1>Hi, I'm Ish</h1>
+    <h1>Machine Learning Engineer</h1>
 </body>
 </html>
