attached css file

--- a/html/index.html
+++ b/html/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Ishsta Glass</title>
 </head>
 <header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Skills</a>
-        <a href="#">Work</a>
-        <a href="#">Contact</a>
+        <ul>
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>About</li>
+            <li><a href="#"></a>Skills</li>
+            <li><a href="#"></a>Work</li>
+            <li><a href="#"></a>Contact</li>
+        </ul>
     </nav>
 </header>
 <body>
-    <h1>Hi, I'm Ish</h1>
-    <h1>Machine Learning Engineer</h1>
+        <h1>Hi, I'm Ish</h1>
+        <h1>Machine Learning Engineer</h1>
 </body>
 </html>
